# restframework_default

./: pyproject.toml
config/: authentication.py  settings.py  urls.py
users/: urls.py  views.py
